sde notes javafx